--- a/TestNGLog4j2/test-output/old/Default suite/classes.html
+++ b/TestNGLog4j2/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.seleniumadvanced.seleniumgrid.TestNG_TestCase</td>
+<td>com.seleniumadvanced.testng.TestNG_TestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
