--- a/TestNGLog4j2/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNGLog4j2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceabc1">  <td>17/05/28 19:15:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_TestCase.setUp()[pri:0, instance:com.seleniumadvanced.seleniumgrid.TestNG_TestCase@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>17/05/29 17:59:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_TestCase.setUp()[pri:0, instance:com.seleniumadvanced.testng.TestNG_TestCase@6e509ffa]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@594427726</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>17/05/29 17:59:23</td>   <td>15871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_TestCase.tearDown()[pri:0, instance:com.seleniumadvanced.testng.TestNG_TestCase@6e509ffa]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@594427726</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>17/05/29 17:59:15</td>   <td>7867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_TestCase.test()[pri:0, instance:com.seleniumadvanced.testng.TestNG_TestCase@6e509ffa]">test</td> 
+  <td>main@594427726</td>   <td></td> </tr>
 </table>
