--- a/TestNGLog4j2/test-output/old/Extent TestSuite/methods-alphabetical.html
+++ b/TestNGLog4j2/test-output/old/Extent TestSuite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Extent TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a60e3">  <td>17/05/19 21:26:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.afterClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@1794d431]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/05/19 21:26:03</td>   <td>953</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test2.afterClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@42e26948]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>17/05/19 21:25:39</td>   <td>-23073</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.beforeClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@1794d431]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/05/19 21:26:03</td>   <td>831</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test2.beforeClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@42e26948]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>17/05/19 21:25:58</td>   <td>-4249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.test1_validLoginTest()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@1794d431]">test1_validLoginTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/05/19 21:26:03</td>   <td>948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testMethod()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@42e26948]">testMethod</td> 
-  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/05/31 02:29:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.afterClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@754ba872]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/05/31 02:29:09</td>   <td>1836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test2.afterClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@146ba0ac]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/05/31 02:28:47</td>   <td>-20954</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.beforeClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@754ba872]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/05/31 02:29:09</td>   <td>1690</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test2.beforeClass()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@146ba0ac]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/05/31 02:29:04</td>   <td>-4087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.test1_validLoginTest()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test1@754ba872]">test1_validLoginTest</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/05/31 02:29:09</td>   <td>1830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testMethod()[pri:0, instance:com.seleniumadvanced.report.withmultipletestcases.Test2@146ba0ac]">testMethod</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
 </table>
